--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://hopamnada.github.io/Authentication-React",
+  "homepage": "https://hopamnada.github.io/Authentication/",
   "name": "react-complete-guide",
   "version": "0.1.0",
   "private": true,
